--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ const title = "Tim Hilton - Contact";
 
 <Layout title={title}>
     <section transition:animate="slide">
-        <h2>Contact Me</h2>
+        <h2><span transition:name="fullName">Contact Me</span></h2>
         <Form client:load />
     </section>
 </Layout>
