--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,10 +20,16 @@ const title = "Tim Hilton - Contact";
         align-items: center;
         justify-content: center;
         flex-direction: column;
+
+
     }
     h2 {
         font-size: 2.5rem;
         font-weight: bold;
         margin: 48px auto 0;
+
+        @media screen and (max-width: 768px) {
+            margin-top: 4rem;
+        }
     }
 </style>
