--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -40,6 +40,11 @@ const currentPath = pathname.slice(1);
         width: 50vw;
         margin: 0 auto;
         padding: 1rem 2rem;
+
+        @media screen and (max-width: 768px) {
+            width: 90vw;
+            font-size: 1.25em;
+        }
     }
 
     nav ul {
