--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,4 +68,12 @@ const { title } = Astro.props;
 			background-color 0.3s ease,
 			color 0.3s ease;
 	}
+
+	p {
+		font-size: 1.25em;
+
+		@media screen and (max-width: 768px) {
+			font-size: 1.5em;
+		}
+	}
 </style>
