--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -32,7 +32,7 @@ const title = "Tim Hilton - Work";
         <div class="portfolio-grid">
             {
                 items.map((item, index) => (
-                    <PortfolioItem 
+                    <PortfolioItem
                         {...item}
                         index={index}
                         isProtected={item.isProtected}
@@ -47,9 +47,14 @@ const title = "Tim Hilton - Work";
 <style>
     .container {
         width: 75vw;
-        margin: 51px auto 0;
         min-height: max-content;
-        height: calc(100vh - 99px);
+        margin: 0 auto;
+        height: calc(100dvh - 48px);
+        padding: 3rem 2rem 2rem;
+
+        @media screen and (max-width: 768px) {
+            padding: 3rem 0 2rem;
+        }
     }
 
     h2 {
@@ -62,6 +67,10 @@ const title = "Tim Hilton - Work";
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         gap: 24px;
+
+        @media screen and (max-width: 768px) {
+            grid-template-columns: 1fr;
+        }
     }
     @keyframes slideIn {
         to {
@@ -69,5 +78,4 @@ const title = "Tim Hilton - Work";
             transform: translateX(0);
         }
     }
-
 </style>
