--- a/src/components/PortfolioItem.astro
+++ b/src/components/PortfolioItem.astro
@@ -10,8 +10,8 @@ interface Props {
   demoUrl: string;
   imageUrl: string;
   index: number;
-  isProtected?: boolean;
-  password?: string;
+  isProtected: boolean;
+  password: string;
 }
 
 const {
