--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -42,7 +42,7 @@ const elevatorPitchHtml = documentToHtmlString(about);
 <style>
     main {
         min-height: max-content;
-        height: calc(100dvh - 48px);
+        /* height: calc(100dvh - 48px); */
         padding: 8rem 2rem 2rem;
 
         @media screen and (max-width: 768px) {
