--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,7 +3,7 @@ import ThemeToggle from "./ThemeToggle.astro";
 const navItems = ["home", "about", "work", "contact"];
 
 const pathname = new URL(Astro.request.url).pathname;
-const currentPath = pathname.slice(1);
+const currentPath = pathname === '/' ? 'home' : pathname.slice(1).split('/')[0];
 ---
 
 <header>
