fix footer on work

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -53,6 +53,7 @@ const title = "Tim Hilton - Work";
 
         @media screen and (max-width: 768px) {
             padding: 3rem 0 2rem;
+            height: max-content;
         }
     }
 
